[package]
name = "toolapi"
version = "0.3.0"
edition = "2024"

license = "AGPL-3.0-only"
description = "MRX ToolAPI - connect clients and tools running in the cloud."
homepage = "https://mrx-org.github.io/mrx-book/"
repository = "https://github.com/mrx-org/toolapi"
readme = "README.md"
keywords = []
categories = []

[features]
default = ["server", "client"]
server = ["dep:axum", "dep:tokio", "dep:tokio-tungstenite", "dep:rustls"]
client = ["dep:tungstenite", "dep:rustls"]
wasm-client = []

[dependencies]
# Always needed (errors, serialization)
thiserror = "2.0.18"
num-complex = { version = "0.4.6", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
rmp-serde = "1.3.1"
ruzstd = "0.8.2"

# SERVER
axum = { version = "0.8.8", features = ["ws"], optional = true }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"], optional = true }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"], optional = true }

# CLIENT (native)
tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"], optional = true }

# For using secure websockets (wss://), tungstenite needs a TLS lib enabled.
# On fly.io, native-tls crashes on debian:bookworm-slim (libssl.so.3 not found).
# herefore we define tungstenite explicitly and enable its rustls feature.
rustls = { version = "0.23", features = ["ring"], default-features = false, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
getrandom_0_3 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }

# CLIENT (wasm) - only compiled on wasm32 targets
web-sys = { version = "0.3", features = ["WebSocket", "BinaryType", "MessageEvent", "ErrorEvent", "CloseEvent", "Event"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
futures-channel = "0.3"
futures-core = "0.3"
